# BeamNG.WorldForge

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_SUMMARY.md  Dockerfile.build  FILE_TREE.md  FINAL_REPORT.md  INDEX.md  LICENSE  PROJECT_COMPLETE.md  README.md  RELEASE_v1.0.0.md  STAGE4_PROGRESS.md  UPGRADE_SUMMARY.md  beamng-worldforge.spec  build.py  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  test_ai_integration.py
backend/api/routes/: map_generation.py  settings.py
backend/config/: .gitkeep  settings.key
backend/models/: __init__.py  map_request.py  terrain.py  user_settings.py
backend/services/: __init__.py  settings_manager.py
backend/services/ai_segmentation/: __init__.py  mask_generator.py  prompts.py  segmentor.py
backend/services/beamng_integration/: __init__.py  building_placer.py  road_builder.py
backend/services/code_generation/: __init__.py  code_generator.py  jbeam_generator.py  mesh_generator.py  prompts.py
backend/services/data_sources/: __init__.py  azure_maps_client.py  base.py  bing_maps_client.py  factory.py  gee_adapter.py  opentopography_client.py  sentinel_hub_client.py
backend/services/export/: __init__.py  beamng_exporter.py
backend/services/gee/: __init__.py  client.py
backend/services/ollama/: __init__.py  client.py  vision_model.py
backend/services/terrain/: __init__.py  processor.py
backend/services/vector_extraction/: __init__.py  contour_extractor.py  vectorizer.py
backend/static/: index.html
docs/: API.md  ARCHITECTURE.md  (+10 more)
(+31 files in other folders)
